UKMCAB-1819: spacing issue on search profile page

--- a/src/UKMCAB.Web.UI/assets/scss/views/cab-profile.scss
+++ b/src/UKMCAB.Web.UI/assets/scss/views/cab-profile.scss
@@ -42,7 +42,7 @@
     }
 
     .cab-detail-date-meta {
-        margin: -5px 0 30px;
+        margin: 0 0 30px;
     }
 
     .cab-tabs {
